# bitstreamCombiner

./: CMakeLists.txt
.github/: Build.yml
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Combiner.cpp  Combiner.h  FileSinkAnnexB.cpp  FileSinkAnnexB.h  FileSourceAnnexB.cpp  FileSourceAnnexB.h  Typedef.h  main.cpp
src/Combiner/: Combiner.cpp  Combiner.h  ParameterSetsModifiers.cpp  ParameterSetsModifiers.h
src/File/: FileSinkAnnexB.cpp  FileSourceAnnexB.h
src/HEVC/: NalUnitHEVC.h  ParserAnnexBHEVC.cpp  ParserAnnexBHEVC.h  byte_alignment.cpp  byte_alignment.h  commonMaps.h  hrd_parameters.cpp  hrd_parameters.h  nal_unit_header.cpp  nal_unit_header.h  pic_parameter_set_rbsp.cpp  pic_parameter_set_rbsp.h  pps_range_extension.cpp  pps_range_extension.h  pred_weight_table.cpp  pred_weight_table.h  profile_tier_level.cpp  profile_tier_level.h  rbsp_trailing_bits.cpp  rbsp_trailing_bits.h  ref_pic_lists_modification.cpp  ref_pic_lists_modification.h  scaling_list_data.cpp  scaling_list_data.h  seq_parameter_set_rbsp.cpp  seq_parameter_set_rbsp.h  slice_segment_header.cpp  slice_segment_header.h  slice_segment_layer_rbsp.cpp  slice_segment_layer_rbsp.h  st_ref_pic_set.cpp  st_ref_pic_set.h  sub_layer_hrd_parameters.cpp  sub_layer_hrd_parameters.h  video_parameter_set_rbsp.cpp  video_parameter_set_rbsp.h  vui_parameters.cpp  vui_parameters.h
src/common/: CodingEnum.h  EnumMapper.h  Functions.cpp  Functions.h  SubByteReader.cpp  SubByteReader.h  SubByteWriter.cpp  SubByteWriter.h  Typedef.h
test/unit/: CMakeLists.txt  Functions.h  ParameterSetReadingWritingTest.cpp  SharedLibraryLoaderTest.cpp  SliceHeaderTest.cpp  TestFileData.h
